home typo & APMS poster JPG

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ google_analytics: # Tracking ID, e.g. "UA-000000-01"
 # Author
 author:
   name: Jeongwon Park
-  desc: Ph.D. Applicant <br> E-mail. <a href="mailto:jeongwon.pusan.ac.kr@pusan.ac.kr">jeongwon.pusan.ac.kr@pusan.ac.kr</a> <br> <a href="https://scholar.google.com/citations?hl=ko&authuser=2&user=EAtqHsAAAAAJ">Google Scholar</a> |  <a href="https://github.com/parkgarden">Github</a> | <a href="https://orcid.org/0000-0001-9229-9393">ORCID</a> | <a href="https://www.linkedin.com/in/jeongwon-park-a87760202/">LinkedIn</a> | <a href="https://nbviewer.org/github/parkgarden/parkgarden.github.io/blob/master/assets/files/JeongwonPark_CV_v0.8.pdf">CV</a> | | <a href="https://simfl-lab.github.io/">SimFL lab website</a> 
+  desc: Ph.D. Applicant <br> E-mail. <a href="mailto:jeongwon.pusan.ac.kr@pusan.ac.kr">jeongwon.pusan.ac.kr@pusan.ac.kr</a> <br> <a href="https://scholar.google.com/citations?hl=ko&authuser=2&user=EAtqHsAAAAAJ">Google Scholar</a> |  <a href="https://github.com/parkgarden">Github</a> | <a href="https://orcid.org/0000-0001-9229-9393">ORCID</a> | <a href="https://www.linkedin.com/in/jeongwon-park-a87760202/">LinkedIn</a> | <a href="https://nbviewer.org/github/parkgarden/parkgarden.github.io/blob/master/assets/files/JeongwonPark_CV_v0.8.pdf">CV</a> | <a href="https://simfl-lab.github.io/">SimFL lab website</a> 
   email: jeongwon.park@pusan.ac.kr
   selfie: assets/img/Jeongwon Park.jpg
 
