--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ google_analytics: # Tracking ID, e.g. "UA-000000-01"
 # Author
 author:
   name: Jeongwon Park
-  desc: Ph.D. Student <br> E-mail. <a href="mailto:jpark440@asu.edu">jpark440@asu.edu</a> <br> <a href="https://scholar.google.com/citations?user=EAtqHsAAAAAJ&hl=en">Google Scholar</a> |  <a href="https://github.com/parkgarden">Github</a> | <a href="https://orcid.org/0000-0001-9229-9393">ORCID</a> | <a href="https://www.linkedin.com/in/jeongwon-park-a87760202/">LinkedIn</a> | <a href="https://docs.google.com/viewer?url=https://github.com/parkgarden/parkgarden.github.io/blob/master/assets/files/JeongwonPark_CV_05_01_2025.pdf?raw=True">CV</a> 
+  desc: Ph.D. Student <br> E-mail. <a href="mailto:jpark440@asu.edu">jpark440@asu.edu</a> <br> <a href="https://scholar.google.com/citations?user=EAtqHsAAAAAJ&hl=en">Google Scholar</a> |  <a href="https://github.com/parkgarden">Github</a> | <a href="https://orcid.org/0000-0001-9229-9393">ORCID</a> | <a href="https://www.linkedin.com/in/jeongwon-park-a87760202/">LinkedIn</a> | <a href="https://drive.google.com/file/d/17A-zty6Thm0OUUfv57zP_xM65rraefsT/view?usp=sharing">CV</a> 
   email: jpark440@asu.edu
   selfie: assets/img/Jeongwon Park.jpg
-
+# <a href="https://docs.google.com/viewer?url=https://github.com/parkgarden/parkgarden.github.io/blob/master/assets/files/JeongwonPark_CV_05_01_2025.pdf?raw=True">
 # social
 social:
   # email: true
